* Information theoretic measures (AIC and BIC) added
* drawing of trees with collapsed nodes
* progress display indicator support for terminal and GUI apps
* added parser for illumina HiSeq2000 and GAiix sequence files as 
  cogent.parse.illumina_sequence.MinimalIlluminaSequenceParser.
* added parser to FASTQ files, one of the output options for illumina's
  workflow, also added cookbook demo.

Changes
-------

* thousand fold performance improvement to nmds
* >10-fold performance improvements to some Table operations

Bug Fixes
---------

* Fixed a Bug in cogent.core.alphabet that resulted in 4 tests err'ing out 
  when using NumPy v1.4.1

Cogent 1.4 - 1.4.1
==================

New Features
------------

* Simplified getting genetic variation from Ensembl and provide the protein
  location of nonsynonymous variants.
* rate heterogeneity variants of pre-canned continuous time substitution
  models easier to define.
* Added implementation of generalised neighbour joining.
* New capabilities for examining genetic variants using Ensembl.
* Phylogenetic methods that can return collections of trees do so as a
  TreeCollections object, which has writeToFile and getConsensusTree methods.
* Added uclust application controller which currently supports uclust
  v1.1.579.

Changes
-------

* Major additions to Cookbook documentation courtesy of Tom Elliot. Thanks
  Tom!
* Improvements to parallelisation.

Bug Fixes
---------

Cogent 1.3 - 1.4
================

New Features
------------

* added support for manipulating and handling macromolecular structures.
  This includes a PDB file format parser, a hierarchical data structure
  to represent molecules. Various utilities to manipulate e.g. clean-up
  molecules, efficient surface area and proximity-contact calculation via
  cython. Expansion into unit-cells and crystal lattices is also possible.
* added a KD-Tree class for fast nearest neighbor look-ups.
  Supports k-nearest neighbours and all neighbours within radius queries